1.0.0
Added remove fav button to side list to remove currently selected favourite.
Added favorites ( dAndd a folder from file list to sidelist ).
Added filter drop down.
Added filetypes filter.
Fixed non-existant last folder.
Added check for file exists warning.
Improved sorting in file dialog.
Added 'Refresh' to file dialog.
Fixed file type sorting.
Fixed showing broken links.
Fixed filetypes on remote share.
Fixed canceling in file chooser.
Fixed open as hexdump with spaces in filepath.
File chooser now remembers last load/save folder.
Fixes for file chooser.
Added custom file chooser.
Improved opening c,c++ etc style include files from nav menu.
Fixed double click select on large wrapped line.
Updated installaled root .desktop file.
Updated default "Run As Root" pref.
Fixed opening root editor from menu.
Raise find/replace dialog when dialog is already open.
Improved Double click on hyphenated word to include "_"
Double click on hyphenated word ( aaa-bbb-ccc ) or on version string ( 1.2.3 ) now selects correctly.
Tweaked shlang plugin.
Tweaked single instance.
Fixed badly exported DISPLAY variable.
Changed KKEDIT_FILE_LIST passed to tools to newline seperated list.
Fixes for getting glib/gio etc defs in 'Search in GTK Docs'.
Fixed ctags version not supporting depth to recurse.
Fixed creating temporary files/folders.
Lowered version needed for Qt5WebEngineWidgets.
Fixed wrong foldername in buildplugs.sh
Fixed bracket match.
Fixed displaying plugin 'Help'
Removed confusing 'Home' button from docviewer.
Redone plugin build system.
Fixed staged install via DESTDIR.
Switch to qtwebengine from obsolete qtwebkit.

0.7.5
Fixed msgid and single mode when opening on same workspace number but different display ( display is taken fromm DISPLAY var ).
Fixed misplaced call to search qt5 api docs.

0.7.4
Fixed show docs when no files open.
Fixed "Find in documentation".
Updated aboutbox links.
Added "Spring" theme.